methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:21: error: Unmatched closing brace '}' ignored here
}
^