methods.slug.SlugHunting.scala.code
def hunt() {
  def marquer(){baisseBrosse();leveBrosse()}
  do{
    if(isFacingTrail()){avance();marquer()}else{droite();if(isFacingTrail()){avance();marquer()}else{droite();droite();avance();marquer()}}}while(!estSurBiscuit())
  prendBiscuit()
  marquer()
}

def isFacingTrail():Boolean = {
  if(estFaceMur){return false}
  avance()
  if(getCouleurSol()==Color.green){recule()
                                  return true}
  recule()
  return false
    // Write your code here
}
}